--- a/templates/cafecrm/add_simple_product.html
+++ b/templates/cafecrm/add_simple_product.html
@@ -9,7 +9,7 @@
   <div class="container-fluid">
     <div class="container d-flex justify-content-between">
       <div class="col-3"></div>
-      <div class="col-6 text-center">
+      <div class="col-6 text-left">
          {% if not sent %} <!--добавляем флаг (добавлено во вьюшку) если не было отправлено, открываем форму-->
            <form method="post">
              <p>Чтобы создать новый товар, введите следующие данные:</p>
