--- a/templates/cafecrm/drinks.html
+++ b/templates/cafecrm/drinks.html
@@ -6,14 +6,28 @@
 {% endblock %}
 
 {% block content %}
-<div class="item">
+  <div class="container-fluid">
+    <div class="container d-flex justify-content-between">
+      <div class="col-3"></div>
+      <div class="col-6 text-left">
 
-<form action="{% url 'sell_temp:sell_add' %}" method="post">
-    {{ sell_drink_form }}
-    {% csrf_token %}
-    <input type="submit" value="Добавить">
-</form>
+             <p>Выбрать товар для продажи:</p>
+             <hr>
+             <form action="{% url 'sell_temp:sell_add' %}" method="post">
+                {% csrf_token %}
+                 <div class="input-field-form">
+                     Товар: {{ sell_drink_form.drink_name }}
+                 </div>
+                 <div class="input-field-form">
+                     Количество: {{ sell_drink_form.quantity }}
+                 </div>
+                <div class="input-field-form">
+               <input type="submit" class="btn-login" value="Добавить">
+             </div>
+             </form>
 
-</div>
-
+      </div>
+      <div class="col-3"></div>
+    </div>
+  </div>
 {% endblock %}
