--- a/templates/cafecrm/create_document.html
+++ b/templates/cafecrm/create_document.html
@@ -6,52 +6,60 @@
 {% endblock %}
 
 {% block content %}
-  {% if not sent %}
-      <!--if error-->
-    {% if message %}
-      <div class="alert alert-danger" role="alert">
-        <strong>!!! {{ message }}</strong>
-          <br>
-          {{ product }}<br>
-           В документе - {{ quantity }}, остаток - {{ stock }}
-          <br> Не хватает {{ deficit }}
-      </div>
-        <a href="{% url 'doc_temp:doc_detail' %}" class="button light">Изменить количество товара</a>
-        <!--if no error-->
-    {% else %}
-      <h4>Новый документ</h4>
-      <!--form-->
-      <form action="" method="post" class="order-form">
-        {{ form.as_p }}
-            <!--items-->
-        <div class="order-info">
-          <h3>Товар в  {{ document_type }}: </h3>
-          <ul>
-            {% for item in doc %}
-              <li>{{ item.product.product_name }} - {{ item.quantity }} {{ item.product.unit }} </li>
-            {% endfor %}
-          </ul>
-          <a href="{% url 'cafecrm:products' %}" class="button light">Добавить товар в {{ document_type }}</a>
+<div class="container-fluid">
+  <div class="container d-flex justify-content-between">
+    <div class="col-3"></div>
+    <div class="col-6 text-left">
+      {% if not sent %}
+            <!--if error-->
+        {% if message %}
+          <div class="alert alert-danger" role="alert">
+            <strong>!!! {{ message }}</strong>
+            <br>
+            {{ product }}<br>
+            В документе - {{ quantity }}, остаток - {{ stock }}
+            <br> Не хватает {{ deficit }}
+          </div>
           <br>
           <a href="{% url 'doc_temp:doc_detail' %}" class="button light">Изменить количество товара</a>
-        </div>
-          <p><input type="submit" value="Создать {{ document_type }}"></p>
+        {% else %}              <!--if no error-->
+          <b>Новый документ</b>
+                <!--form-->
+          <form action="" method="post">
             {% csrf_token %}
-      </form>
-    {% endif %}
-  {% else %} <!--success-->
-    <h4>Документ - {{ document.document_type }} № {{ document.id }} был создан {{ document.created }}</h4>
-      <!--ingredients-->
-    <div class="order-info">
-      <h4>Товары в документе: </h4>
-        <ul>
-          {% for item in doc %}
-            <li>
-                    {{ item.product.product_name }} - {{ item.quantity }} {{ item.product.unit }}
-                </li>
-            {% endfor %}
-        </ul>
-        {{ document.description }}
+            <div class="check-list">
+              {{ form.document_type }}
+            </div>
+                <!--comments-->
+               {{ form.description }}
+                <!--items-->
+            <div class="check-list">
+              <ul class="list-group list-group-flush">
+                {% for item in doc %}
+                  <li class="list-group-item">{{ item.product.product_name }} - {{ item.quantity }} {{ item.product.unit }}</li>
+                {% endfor %}
+              </ul>
+            </div>
+            <div>
+                <b>В случае необходимости вы можете:</b>
+                  <br>
+                <a href="{% url 'cafecrm:products' %}" class="button light">Добавить товар в {{ document_type }}</a>
+                  <br>
+                <a href="{% url 'doc_temp:doc_detail' %}" class="button light">Изменить его количество</a>
+                  <br>
+                <b>Если все правильно:</b>
+            </div>
+            <p><input type="submit" class="btn-login" value="Создать {{ document_type }}"></p>
+          </form>
+        {% endif %}
+      {% else %} <!--success-->
+        <div class="alert alert-warning" role="alert">
+          Документ успешно создан
+        </div>
+      {% endif %}
     </div>
-    {% endif %}
+    <div class="col-3"></div>
+  </div>
+</div>
+
 {% endblock %}
