--- a/templates/cafecrm/drink_create.html
+++ b/templates/cafecrm/drink_create.html
@@ -37,12 +37,16 @@
           <a href="{% url 'doc_temp:doc_detail' %}" class="button light">Изменить количество</a>
           <p><input type="submit" class="btn-login" value="Создать"></p>
         </form>
-      {% else %}
-            <!--success-->
-        <div class="alert alert-warning" role="alert">
-          Документ успешно создан
-        </div>
-      {% endif %}
+          {% if message %}
+               <div class="alert alert-danger" role="alert">
+                 {{ message}}
+               </div>
+             {% endif %}
+      {% else %}  <!--если отправлено-->
+           <div class="alert alert-warning" role="alert">
+             {{ message}}
+           </div>
+         {% endif %}
     </div>
     <div class="col-3"></div>
   </div>
