--- a/templates/cafecrm/menu.html
+++ b/templates/cafecrm/menu.html
@@ -8,6 +8,7 @@
 
 
 {% block content %}
+    {{ request.META.HTTP_REFERER }}
     <!--Drinks-->
 <div class="container mt-3">
   <h4>Напитки</h4>
@@ -21,7 +22,7 @@
     <tbody>
       {% for el in menu_drinks %}
         <tr>
-          <td> {{ el.drink_name }} </td>
+          <td> {{ el.drink_name }} - {{ el.price }}</td>
           <td>
             <ul>
             {% for item in drink_items %}
