--- a/templates/cafecrm/products_for_new_drink.html
+++ b/templates/cafecrm/products_for_new_drink.html
@@ -10,7 +10,8 @@
   <div class="container d-flex justify-content-between">
     <div class="col-3"></div>
       <div class="col-6 text-left">
-        <p>Выбрать товар для складского документа:</p>
+        <p>Выбрать ингридиенты для нового напитка:</p>
+          {{ request.path }}
         <hr>
         <form action="{% url 'doc_temp:doc_add' prev_page %}" method="post">
           {% csrf_token %}
@@ -28,4 +29,6 @@
     <div class="col-3"></div>
   </div>
 </div>
+
+
 {% endblock %}
